--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Akhundov-Ravan.github.io/Seviko/",
+  "homepage": "https://akhundov-ravan.github.io/Seviko/",
   "name": "seviko",
   "version": "0.1.0",
   "private": true,
@@ -12,10 +12,10 @@
     "web-vitals": "^4.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
-     "predeploy": "npm run build",
-     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
