--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://akhundov-ravan.github.io/Seviko/",
+  "homepage": "https://akhundov-ravan.github.io/seviko/",
   "name": "seviko",
   "version": "0.1.0",
   "private": true,
